# mesos-modules

./: .gitignore  CMakeLists.txt  LICENSE
cmake-modules/: FindMesos.cmake
external-allocator/: CMakeLists.txt  external-allocator.json.in  module_main.cpp
test-hook/: CMakeLists.txt  module_main.cpp  test-hook.json.in
